plugins {
    id "com.jfrog.artifactory" version "4.31.0"
}

description 'JNI Java library (cbc-java) for COIN-OR CBC Solver'

allprojects {
    apply plugin: 'java'
    apply plugin: 'maven-publish'
    apply plugin: "com.jfrog.artifactory"


    sourceCompatibility = 11
    targetCompatibility = 11
    group 'de.unijena.bioinf.cbc-java'
    version '2.10.8-SNAPSHOT' //corresponds tp cbc version

    publishing {
        publications {
            javaCBC(MavenPublication) {
                from components.java
            }
        }

        repositories {
            maven {
                url= project.findProperty("de.unijena.bioinf.build.artifactory.url")
                name="GitLab"
                credentials(HttpHeaderCredentials) {
                    name = project.findProperty("de.unijena.bioinf.build.artifactory.token.name")
                    value = project.findProperty("de.unijena.bioinf.build.artifactory.token")
                }
                authentication {
                    header(HttpHeaderAuthentication)
                }
            }
        }
    }
}

repositories {
    mavenLocal()
    mavenCentral()

    maven {
        url "https://bio.informatik.uni-jena.de/repository/libs-oss"
        metadataSources {
            mavenPom()
            artifact()
        }
    }
}

dependencies {
    //all sub projects as dependency
    project.subprojects.forEach {
        implementation project(":${it.name}")
    }
    implementation 'cz.adamh:native-utils:1.1-SNAPSHOT'
    implementation 'org.slf4j:slf4j-api:2.0.6'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

test {
    useJUnitPlatform()
}

//artifactoryPublish.skip = true
artifactory {
    contextUrl = 'https://bio.informatik.uni-jena.de/repository/'
    publish {
        repository {
            if (version.toString().endsWith('-SNAPSHOT'))
                repoKey = 'libs-snapshot-local'
            else
                repoKey = 'libs-release-local'

            username = project.findProperty('de.unijena.bioinf.build.artifactory.username')
            password = project.findProperty('de.unijena.bioinf.build.artifactory.password')
        }
        defaults {
            publications('javaCBC')
        }
    }
}

